--- a/DeliveryApp/DeliveryApp/appsettings.json
+++ b/DeliveryApp/DeliveryApp/appsettings.json
@@ -6,7 +6,8 @@
     }
   },
   "AllowedHosts": "*",
-  "ConnectionStrings": {
-    "DefaultConnection": "Server=OLICIKA\\ASUS;Database=CourierAppDB;Trusted_Connection=True;TrustServerCertificate=True;" 
+    "ConnectionStrings": {
+      "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=DeliveryAppDb;Trusted_Connection=True;MultipleActiveResultSets=true"
+    }
   }
-}
+
