--- a/DeliveryApp/DeliveryApp.Client/DeliveryApp.Client.csproj
+++ b/DeliveryApp/DeliveryApp.Client/DeliveryApp.Client.csproj
@@ -13,4 +13,8 @@
   
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\Shared\DeliveryApp.Shared.csproj" />
+  </ItemGroup>
+
 </Project>
